[tool.poetry]
name = "pr-agent"
version = "0.1.0"
description = ""
authors = ["George Ruan <ruan.george@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
openai = "^1.57.4"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
